--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
     <body>
         <!-- Nav Bar -->
        <div id="navbar">
-           <div id="">
+                   <nav class="navbar navbar-expand-md navbar-light">    
+          <div class="container-fluid">            
+            <div class="navbar-header">              
+              <a class="navbar-brand" href="#">Destiny’s Portfolio</a>
+            </div>
+            <ul class="nav navbar-nav">        
+              <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Projects</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+          </div>
+        </nav>
+        <div id="">
                
            </div>
        </div>
