--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <body>
         <!-- Nav Bar -->
        <div id="navbar">
-                   <nav class="navbar navbar-expand-md navbar-light">    
+                   <nav class="navbar navbar-expand-md navbar-dark">
           <div class="container-fluid">            
             <div class="navbar-header">              
-              <a class="navbar-brand" href="#">Destiny’s Portfolio</a>
+              <a class="navbar-brand" href="#">Destiny's Portfolio</a>
             </div>
             <ul class="nav navbar-nav">        
               <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
