--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                 <div class="col-4">
                     <div id="imageone">
                         <img class="me" src="images/IMG_0166.JPG">
+                        <div class="caption">
+                            <h1>sifho</h1>
+                            <p>Hello</p>
+                        </div>
                     </div>
                     </div>
                 <div class="col-4">
@@ -62,6 +66,46 @@
                     <p id="aboutmetwo">Hi</p>
                 </div>
                <div class="col-2"></div>
+            </div>
+            <div class="row "id="thumbnails">
+                <div class="col-sm-3" class="img-thumbnail">
+                    <a class="thumbnail" href="#">
+                        <img class="img-thumbnail" src="images/EarthSim.png">
+                        <div class="caption">
+                        <h1>Earth Simulator</h1>
+                        <p>This is...</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-sm-3" class="img-thumbnail">
+                    <a class="thumbnail" href="#">
+                        <img class="img-thumbnail" src="images/EarthSim.png">
+                        <div class="caption">
+                        <h1>Earth Simulator</h1>
+                        <p>This is...</p>
+                        </a>
+                    </div>
+                </div>
+                <div id="thumbtwo">
+                    <div class="col-sm-3" class="img-thumbnail">
+                    <a class="thumbnail" href="#">
+                        <img class="img-thumbnail" src="images/EarthSim.png">
+                        <div class="caption">
+                        <h1>Earth Simulator</h1>
+                        <p>This is...</p>
+                        </a>
+                    </div>
+                </div>
+                <div id="thumbthree">
+                    <div class="col-sm-3" class="img-thumbnail">
+                    <a class="thumbnail" href="#">
+                        <img class="img-thumbnail" src="images/EarthSim.png">
+                        <div class="caption">
+                        <h1>Earth Simulator</h1>
+                        <p>This is...</p>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     
