--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     
                 </div>
                 <div class="col-sm-3">
-                   <h1 id="projects">Projects</h1>
+                   <h1 id="projects">Project</h1>
                 </div>
             </div>
             
